style.css
/* ... */
@keyframes spinner {
	0% {
		transform: scale(0.3);
	}

	100% {
		transform: scale(1);
		opacity: 0;
	}
}

/* 
27. Plugin : wpPageNavi 
*/

#archive-nav {
	padding-left:15px;
	padding-right:15px;
	border:0;
	margin:0;
	display: block;
	width:auto;
}

.wp-pagenavi {
	margin-top:50px;
}

.no_wp_pagenavi {
	margin-top:30px;
}

/* Active Page */
.wp-pagenavi .current
{font-weight:bold;margin-right:30px;font-size:1.2rem;}

/* Space Right */
.wp-pagenavi .page
{margin-right:30px;font-size:1.2rem;}

/* Normalization */
.wp-pagenavi a.page.larger, 
.wp-pagenavi a.page.smaller, 
.wp-pagenavi a.first,
.wp-pagenavi a.last,
.wp-pagenavi .extend,
.wp-pagenavi .pages,
.wp-pagenavi a.previouspostslink,
.wp-pagenavi a.nextpostslink
{margin-right:30px;font-size:1.2rem;}

/* Space Right */
.wp-pagenavi .current,
.wp-pagenavi .page,
.wp-pagenavi a.first,
.wp-pagenavi a.last,
.wp-pagenavi .extend,
.wp-pagenavi .pages,
.wp-pagenavi a.previouspostslink,
.wp-pagenavi a.nextpostslink
{float:left;margin-top:20px;}

/* 
28. Subscribe To Comments Reloaded 
*/

#subscribe-reloaded-update-p {
	display:none;
}

#post-9999999 p.updated {
	background-color: #ffffb3;
	padding-left: 10px;
	margin-top: 15px;
	border-width: 1px;
	border-style: solid;
}

.comment-form-subscribe-reloaded input {
	margin-right:10px;
}

form label[for=subscribe_reloaded_email] {
	margin-right: 15px;
	padding: 7px 0 0;
	display: inline-block;
}

.comment-form-subscribe-reloaded {
	margin-top:30px;
}


/* 
29. Mathilda 
*/

#mathilda-area
{margin-top:0px;}

.mathilda-tweet
{margin-bottom:60px;clear:both;}

.mathilda-tweet-symbol
{float:left;box-shadow:none !important;}

.entry-content p.mathilda-tweet-dateandtime
{margin-bottom:3px;font-size:80%;}

.mathilda-tweet-text, .mathilda-tweet-url, .mathilda-tweet-dateandtime
{margin-left:50px;}

.mathilda-tweet-text
{margin-bottom:10px;}

.mathilda-tweet-image
{padding-left:50px;max-width:100%;}

.mathilda-tweet-video-link
{position:relative;top:7px;padding-left:50px;}

.entry-content .mathilda-url-follows
{margin-bottom:2px;}

.mathilda_bottom_forward
{margin-top:40px;margin-bottom:0;font-size:120%;}

.mathilda_bottom_forward_number, .mathilda_extend
{margin-right:30px;float:left;padding-top:30px;box-shadow:none !important;border-bottom:0 !important;text-decoration:none !important;}

.mathilda_bottom_new_tweets, .mathilda_bottom_previous_tweets 
{margin-bottom:30px;}

.mathilda_bottom_previous_tweets 
{margin-right:30px;}

.mathilda_bottom_new_tweets 
{text-align:right;float:right;}

.mathilda_bottom_forward .active
{font-weight:bold;}

.mathilda-embed
{margin-top:10px;}

iframe.wp-embedded-content
{margin-left: 0 !important;
padding-left: 0 !important;}

.mathilda-tweet a
{color:darkred !important;}

.mathilda-tweet-url
{overflow:hidden; }

a.mathilda-tweet-url-link
{border-bottom-color:darkred !important;overflow:hidden; }

a.mathilda-hashtag, a.mathilda-mention
{border-bottom-width:0;}

.mathilda-tweet-text
{margin-bottom:10px;}

.mathilda-is-here h1.entry-title
{display:none;}

.mathilda-is-here .site-content article
{max-width:100%;}

.mathilda-is-here .entry-content
{max-width:100% !important;}

.mathilda_bottom_forward
{width:100% !important;}

.mathilda-tweet-image
{max-width:100% !important;}

blockquote.wp-embedded-content {
margin-left: 0;
padding-left: 0;
}

iframe.twitter-tweet
{
	padding-left:0;
}

.wp-pagenavi a.nextpostslink
{margin-right:30px;font-size:1.2rem;}

/* Space Right */
.wp-pagenavi .mathilda_extend, .wp-pagenavi .tootpress_nav_dots
{float:left;margin-top:20px;}

/* Normalization */

.wp-pagenavi .mathilda_extend, .wp-pagenavi .tootpress_nav_dots
{margin-right:30px;font-size:1.2rem;}

/* 
2X. TootPress 
*/

.tootpress-toot {
    margin-bottom: 60px;
    clear:both;
}

.tootpress-toot-symbol {
    float:left !important;
    margin-top:5px;
}

.toot-content, .toot-date, .toot-image {
    margin-left:60px;
}

.toot-date p {
    margin-bottom:0px;
	font-size:80%;
}

.toot-content p {
    margin-top:3px;
	margin-bottom:10px;
}

.toot-image img {
    max-width: 100%;
}

.tootpress_nav {
    margin-top:80px;
    width:100%;
}

.tootpress_nav_number {
    margin-right:30px;
	font-size:120%;
	color:#000 !important;
	padding-top:40px;
}

a.tootpress_nav_number  {
	text-decoration:none !important;
	border-bottom: 0px!important;
}

.tootpress_nav .active {
    font-weight:bold !important;
}

.tootpress_nav_dots {
    margin-right:30px;
}

.tootpress_nav_standard_newer_toots {
    margin-right:30px;
}

.tootpress-is-here h1.entry-title {
	display:none;
}

.tootpress-is-here .site-content article {
	max-width:100%;
}

.tootpress-is-here .entry-content {
	max-width:100% !important;
}

/*
30. Pinseldisko
*/

.post-type-archive-pinseldisko .entry-date {
	margin-top:10px;
}
.single-pinseldisko .entry-content strong
{
	color:black;
	font-weight: 600;
}
.post-type-archive .type-pinseldisko img
{
	margin-top:10px;
}
.pinseldisko .entry-date
{
	margin-top: 20px;
}
.single-pinseldisko h1.entry-title
{
	display:none;
}

/* 
31. Zimtwolke 
*/

.post-type-archive-ello .entry-content {
	margin-bottom:20px;
}

.btn-zimt-comments {
	display: inline-block;
	margin: 0 0 0 0px;
	overflow: hidden;
	cursor: pointer;
	background: #000;
	color: rgba(255, 255, 255, 0.85);
	text-align: center;
	font-weight: 700;
	text-transform: uppercase;
	letter-spacing: 2px;
	text-decoration: none !important;
	padding: 5px 8px;
	font-size: 10px;
	font-size: 0.625rem;
}

.btn-zimt-comments a {
	color: white;
	border: none;
}

.zimt-comments-yes
{
	background-color:#ac1b1b !important;
}

/* 
32. Page WordPress
*/

/* @ DEV */

.page-id-1880 .noborder
{border-bottom: 1px !important;} 

/* @ PROD */

.page-id-2169 .noborder
{border-bottom: 1px !important;} 

/* 
33. Plugin Podlove
*/

.podlove-contributors-table
{
	margin-top:10px;
}

.podlove-contributors-table td
{
	font-size:1rem;
}
/* ... */

